--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -52,11 +52,38 @@
   cursor: pointer;
 }
 
-.nav__icons span img {
+.nav__icons .profile img {
   width: 30px;
   height: 30px;
   cursor: pointer;
   margin-top: -10px;
+  border-radius: 50px;
+}
+
+.nav__icons .profile {
+  position: relative;
+  z-index: 9;
+}
+
+.nav__icons .profile .profile__actions {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 120px;
+  z-index: 10;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: var(--card-bg-01);
+  line-height: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+.show__profileActions {
+  display: block !important;
 }
 
 .mobile__menu {
@@ -158,7 +185,7 @@
     font-size: 1.2rem !important;
   }
 
-  .nav__icons span img {
+  .nav__icons .profile img {
     width: 1.4rem;
     height: 1.4rem;
   }
